--- a/posts/2019-10-13.md
+++ b/posts/2019-10-13.md
@@ -286,7 +286,7 @@ Cool, more control flow!
 
 ### Interpreting IfStatement
 
-For [IfStatement](https://github.com/estree/estree/blob/master/es5.md#ifstatement) we interpret the condition, and depending on the condition, interpret the body or the else node. In ordert to make empty else interpreting easier, we'll also add a null short-circuit to `interpretStatement`.
+For [IfStatement](https://github.com/estree/estree/blob/master/es5.md#ifstatement) we interpret the condition, and depending on the condition, interpret the body or the else node. In order to make empty else interpreting easier, we'll also add a null short-circuit to `interpretStatement`.
 
 ```js
 function interpretStatement(context, ret, statement) {
