Link source code

--- a/posts/2019-10-13.md
+++ b/posts/2019-10-13.md
@@ -22,7 +22,7 @@ print(fib(15));
 
 > You'll note this doesn't actually run with Node.js because `print` function we are using is undefined. We'll provide that for the runtime to make things easier on ourselves.
 
-We'll do this in around 200 lines of code. Code will be available on GitHub.
+We'll do this in around 200 lines of code. Code is available on [GitHub](https://github.com/sanxiyn/toy-interpreter).
 
 ### First steps
 
