Use ES2018 spread syntax

--- a/posts/2019-10-13.md
+++ b/posts/2019-10-13.md
@@ -99,7 +99,7 @@ function interpretBlockStatement(context, ret, statement) {}
 
 function interpretFunctionDeclaration(context, ret, declaration) {
   context[declaration.id.name] = function(context, ret, args) {
-    let child = Object.assign({}, context);
+    let child = {...context};
     for (let i = 0; i < declaration.params.length; i++) {
       child[declaration.params[i].name] = args[i];
     }
