Explain SpiderMonkey's baseline interpreter

--- a/posts/2020-01-03.md
+++ b/posts/2020-01-03.md
@@ -41,3 +41,5 @@ JavaScriptCore's options are defined in [OptionsList.h](https://github.com/WebKi
 Note that values for FTL JIT do not match explanation in WebKit wiki; of course, code is correct and wiki is outdated.
 
 SpiderMonkey's JIT options are defined in [JitOptions.cpp](https://github.com/mozilla/gecko-dev/blob/master/js/src/jit/JitOptions.cpp). Look for `*WarmUpThreshold`. Functions start in interpreter. Calls and loops are counted. When counter reaches 10, baseline interpreter is used. When counter reaches 100, baseline compiler is used. When counter reaches 1000, Ion compiler is used with normal optimization level. When counter reaches 100000, Ion compiler is used with full optimization level.
+
+SpiderMonkey's baseline interpreter is not same as interpreter. If that sounds weird, you are not alone. [The Baseline Interpreter: a faster JS interpreter in Firefox 70](https://hacks.mozilla.org/2019/08/the-baseline-interpreter-a-faster-js-interpreter-in-firefox-70/) explains what's going on in detail.
