Add a link to tiered compilation in Mono

--- a/posts/2020-01-03.md
+++ b/posts/2020-01-03.md
@@ -20,7 +20,7 @@ Actual values are defined in [globals.hpp](https://github.com/openjdk/jdk/blob/m
 
 I will look at [CoreCLR](https://github.com/dotnet/runtime). The repository contains entire .NET system, which is called .NET Core. VM part is called CoreCLR, and located under `src/coreclr`. The rest is libraries.
 
-[Mono](https://www.mono-project.com/) is another interesting system I would like to investigate. Help is appreciated.
+[Mono](https://www.mono-project.com/) is another interesting system. After the first version of this post was published, [@lewurm](https://github.com/lewurm) pointed me to his own PR implementing [tiered compilation in Mono](https://github.com/mono/mono/pull/17551) (2019). Thanks!
 
 .NET didn't have tiered compilation for a long time. When it got implemented in 2016, a design document titled [Tiered Compilation](https://github.com/dotnet/runtime/blob/master/docs/design/features/tiered-compilation.md) was written. It was released in 2.1 and enabled by default in 2.2, both in 2018.
 
