Update the link to SpiderMonkey's new website

--- a/posts/2020-01-03.md
+++ b/posts/2020-01-03.md
@@ -30,7 +30,7 @@ Actual values are defined in [clrconfigvalues.h](https://github.com/dotnet/runti
 
 ### JavaScript
 
-Among JIT implementations of JavaScript, I will look at [V8](https://v8.dev/), [JavaScriptCore](https://trac.webkit.org/wiki/JavaScriptCore), and [SpiderMonkey](https://developer.mozilla.org/en-US/docs/Mozilla/Projects/SpiderMonkey).
+Among JIT implementations of JavaScript, I will look at [V8](https://v8.dev/), [JavaScriptCore](https://trac.webkit.org/wiki/JavaScriptCore), and [SpiderMonkey](https://spidermonkey.dev/).
 
 [ChakraCore](https://github.com/chakra-core/ChakraCore) is another interesting implementation: if you know about it, please tell me.
 
